fix: added components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1132,6 +1132,69 @@
 	"invalid_link": "Invalid Link Parameter.",
 	"title_exceeds_limit": "Title should not exceed 150 characters.",
 	"link_placeholder": "e.g., https://polkadot.polkassembly.io",
+    "success_header": "Success!",
+	"error_header": "Error!",
+	"add": "Add",
+	"curator_bio": "Curator Bio",
+	"curator_bio_placeholder": "Enter your curator bio",
+	"submit": "Submit",
+	"amount_disbursed": "Amount Disbursed",
+	"last_6_months": "Last 6 months",
+	"nothing_to_see": "Nothing to see here",
+	"curate_bounties_message": "Curate bounties to view data here",
+    "number_of_bounties": "Number of Bounties",
+    "child_bounties_disbursed": "Child Bounties Disbursed",
+	"no_address_available": "No address available to copy",
+	"add_bio": "Add Bio",
+	"edit_bio": "Edit Bio",
+	"bounties_curated": "{{count}} Bounties Curated",
+	"child_bounties_curated": "{{count}} Child Bounties Curated",
+    "curator_dashboard": "Curator Dashboard",
+    "curator_general_tab_title": "General",
+	"curator_general_tab_description": "Track your bounty via notifications",
+	"curator_curated_tab_title": "Bounties Curated",
+	"curator_curated_tab_description": "Review and reward submissions on curated bounties",
+	"curator_pending_requests_tab_title": "Pending Requests",
+	"curator_pending_requests_tab_description": "Review curator and child bounty requests",
+	"curator_dashboard_icon_alt": "Curator Dashboard Icon for {{tab}}",
+    "join_polkassembly_curator_dashboard": "Join Polkassembly to see your Curator Dashboard!",
+    "pending_requests": "Pending Requests",
+    "received_requests": "Received Requests",
+    "sent_requests": "Sent Requests",
+    "approve_submission": "Approve Submission",
+    "approve": "Approve",
+    "reject_submission": "Reject Submission",
+    "reject": "Reject",
+    "accepted": "Accepted",
+    "pending": "Pending",
+    "no_submissions_found": "No Submissions Found",
+    "make": "Make",
+    "or_receive_submissions": "or Receive submissions to view them here",
+    "submissions": "Submissions",
+    "create_bounty_proposals": "Create Bounty Proposals",
+    "or_receive_requests": "or Receive requests to view",
+    "them_here": "them here",
+    "no_bounties_curated_yet": "No Bounties Curated Yet",
+    "claimed_by": "Claimed By",
+    "add_expert_review": "Add Expert Review",
+    "please_write_your_views_about_the_proposal_below": "Please write your views about the proposal below",
+    "add_your_review": "Add your Review!",
+    "please_use_desktop_to_verify_on_chain_identity": "Please use your desktop computer to verify on chain identity",
+    "share_any_relevant_contributions_youve_made_in_the_past_for_the_polkadot_ecosystem": "Share any relevant contributions you've made in the past for the Polkadot ecosystem.",
+    "why_do_you_want_to_become_an_expert": "Why do you want to become an expert?",
+    "verify_identity": "Verify Identity",
+    "verify_your_identity": "Verify your identity",
+    "before_applying_to_become_an_expert": "Before applying to become an expert.",
+    "oops_your_identity_is_not_verified": "Oops! Your identity is not verified!",
+    "congratulation": "Congratulations!",
+    "your_application_has_been_submitted": "Your application has been submitted. It may take 3-5 days to review your application!",
+    "become_an_expert": "Become an Expert!",
+    "oops_looks_like_you_are_not_an_expert": "Oops! Looks like you are not an expert!",
+    "become_an_expert_to_add_your_views_to_various_proposals_and_discussions": "Become an expert to add your views to various proposals and discussions.",
+    "your_application_is_being_thoroughly_checked_by_our_team": "Your application is being thoroughly checked by our team! Please wait while we get back to you!",
+    "application_under_review": "Application Under Review",
+    "we_regret_to_inform_you_that_your_application_to_become_an_expert_was_rejected_by_our_team": "We regret to inform you that your application to become an Expert was rejected by our Team! Don’t worry, you can apply again in 30 days!",
+    "application_rejected": "Application Rejected!"
 }
     
 
