fix: added component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1194,7 +1194,42 @@
     "your_application_is_being_thoroughly_checked_by_our_team": "Your application is being thoroughly checked by our team! Please wait while we get back to you!",
     "application_under_review": "Application Under Review",
     "we_regret_to_inform_you_that_your_application_to_become_an_expert_was_rejected_by_our_team": "We regret to inform you that your application to become an Expert was rejected by our Team! Don’t worry, you can apply again in 30 days!",
-    "application_rejected": "Application Rejected!"
+    "application_rejected": "Application Rejected!",
+    "upcoming_events": "Upcoming Events",
+    "*DateTime_in_UTC": "*DateTime in UTC",
+    "available_dark_icon": "Available Dark Icon",
+    "available_icon": "Available Icon",
+    "funds_tooltip": "Funds available to be spent",
+    "current_price_dark_icon": "current price dark icon",
+    "current_price_icon": "current price icon",
+    "current_price_of": "Current Price of {{token}}",
+    "price_token": "Price {{token}}",
+    "weekly_change": "Weekly Change",
+    "next_burn_dark_icon": "next burn dark icon",
+    "next_burn_icon": "next burn icon",
+    "next_burn_tooltip": "If the Treasury ends a spend period without spending all of its funds, it suffers a burn of a percentage of its funds.",
+    "spend_period_dark_icon": "spend period dark icon",
+    "spend_period_icon": "spend period icon",
+    "spend_period": "Spend Period",
+    "spend_period_tooltip": "Funds requested from the treasury are periodically distributed at the end of the spend period.",
+    "days": "days",
+    "hours_short": "hrs",
+    "minutes_short": "mins",
+    "homepage": "Homepage",
+    "discord": "Discord",
+    "youtube": "Youtube",
+    "reddit": "Reddit",
+    "telegram": "Telegram",
+    "block_explorer": "Block Explorer",
+    "join_community": "Join our Community to discuss, contribute and get regular updates from us!",
+    "minimize_gallery": "Minimize Gallery",
+    "view_gallery": "View Gallery",
+    "keynote_duration": "1:40 hours",
+    "keynote_title": "Gavin's keynote @Decoded 2023",
+    "medium_read_time": "17 min read",
+    "medium_blog_title": "Gavin's blog on Medium",
+    "wiki": "Wiki",
+    "user_guide": "Polkassembly user guide"
 }
     
 
