fix: added components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1115,15 +1115,15 @@
 	"create_discussion": "Create Discussion Post",
 	"title_length_exceeded": "Title should not exceed 150 characters.",
       "view_child_bounty": "View Child Bounty",
-  "success_delegate_icon": "Success Delegate Icon",
-  "child_bounty_creation_initiated": "Child Bounty creation initiated for",
-  "multisig_address": "Multisig Address",
-  "child_bounty_curator": "Child Bounty Curator",
-  "child_bounty_amount": "Child Bounty Amount",
-  "link_to_parent_bounty": "Link to Parent Bounty",
-  "link": "Link",
-  "approval_request_sent": "An approval request has been sent to signatories to confirm the transaction.",
-  "view_details": "View Details",
+    "success_delegate_icon": "Success Delegate Icon",
+    "child_bounty_creation_initiated": "Child Bounty creation initiated for",
+    "multisig_address": "Multisig Address",
+    "child_bounty_curator": "Child Bounty Curator",
+    "child_bounty_amount": "Child Bounty Amount",
+    "link_to_parent_bounty": "Link to Parent Bounty",
+    "link": "Link",
+    "approval_request_sent": "An approval request has been sent to signatories to confirm the transaction.",
+    "view_details": "View Details",
   	"create_child_bounty_icon": "Create Child Bounty Icon",
 	"create_child_bounty": "Create Child Bounty",
 	"write_child_bounty_step": "Write Child Bounty",
@@ -1229,7 +1229,137 @@
     "medium_read_time": "17 min read",
     "medium_blog_title": "Gavin's blog on Medium",
     "wiki": "Wiki",
-    "user_guide": "Polkassembly user guide"
+    "user_guide": "Polkassembly user guide",
+    "no_notifications": "No Notifications",
+    "to_get_alerts_for_the_governance_events": "to get alerts for the governance events",
+    "join_polkassembly_to_start_using_notifications": "Join Polkassembly to start using notifications.",
+    "discuss_contribute_and_get_regular_updates_from_polkassembly": "Discuss, contribute and get regular updates from Polkassembly.",
+    "manage_settings": "Manage Settings",
+    "you_have": "You have",
+    "payouts_from_your_proposals": "payouts from your proposals",
+    "member_referenda": "Member Referenda",
+    "aggregation_of_data_across_all_membership_referenda": "Aggregation of data across all membership referenda",
+    "max_deciding": "Max Deciding",
+    "confirm_period": "Confirm Period",
+    "min_enactment_period": "Min Enactment Period",
+    "decision_period": "Decision Period",
+    "decision_deposit": "Decision Deposit",
+    "prepare_period": "Prepare Period",
+    "version": "Version",
+    "code": "Code",
+    "codec": "Codec",
+    "fellow": "Fellow",
+    "ally": "Ally",
+    "retiring": "Retiring",
+    "websites": "Websites",
+    "members": "Members",
+    "runners_up": "Runners up",
+    "polkassembly": "Polkassembly",
+    "you_have_delegated_vote_to": "You have delegated vote to",
+    "hide_track_details": "Hide Track details",
+    "show_track_details": "Show Track details",
+    "support": "Support",
+    "approval": "Approval",
+    "insufficient_transferable_balance_for_paying_gas_fee": "Insufficient Transferable Balance for paing Gas Fee",
+    "the_substrate_address_has_been_changed_to": "The substrate address has been changed to",
+    "you_can_multiply_your_votes_by_locking_your_tokens_for_longer_periods_of_time": "You can multiply your votes by locking your tokens for longer periods of time.",
+    "selected_track_s": "Selected track(s)",
+    "delegate_to_all_available_tracks": "Delegate to all available tracks",
+    "select_available_tracks": "Select available tracks",
+    "an_approximate_fees_of": "An approximate fees of",
+    "will_be_applied_to_the_transaction": "will be applied to the transaction",
+    "delegation_dashboard_coming_soon": "Delegation dashboard coming soon",
+    "successfully": "successfully",
+    "undelegated_successfully": "Undelegated successfully",
+    "time_of_vote": "Time of Vote",
+    "submitted": "Submitted",
+    "closed": "Closed",
+    "analytics": "Analytics",
+    "track": "Track",
+    "undelegate": "Undelegate",
+    "people_chain_is_now_live_for": "People Chain is now LIVE for",
+    "teleporting_funds_for_multisig": "Teleporting funds for multisig. This may take a few seconds...",
+    "insufficient_available_balance_in_multisig": "Insufficient available balance in multisig",
+    "teleporting_funds_for_signatory": "Teleporting funds for signatory. This may take a few seconds...",
+    "insufficient_available_balance_in_signatory": "Insufficient available balance in signatory",
+    "teleporting_funds": "Teleporting funds. This may take a few seconds...",
+    "congratulations_you_have_been_successfully_verified_by_polkassembly": "Congratulations, you have been successfully verified by polkassembly!",
+    "this_account_has_already_set_socials": "This account has already set socials. Kindly",
+    "from_polkassembly_to_complete_the_process": "from polkassembly to complete the process",
+    "please_provide_your_email_for_request_judgement": "Please provide your email for request judgement.",
+    "your_multisig_address": "Your Multisig Address",
+    "please_note_the_verification_cannot_be_transferred_to_another_address": "Please note the verification cannot be transferred to another address.",
+    "your_multisig_signatory_address": "Your Multisig signatory Address",
+    "use_proxy_address": "Use proxy address",
+    "proxy_address_does_not_exist_on_selected_wallet": "Proxy address does not exist on selected wallet",
+    "legal_name": "Legal Name",
+    "invalid_legal_name": "Invalid legal name",
+    "please_add_your_social_handles_that_require_verification": "Please add your social handles that require verification.",
+    "invalid_email_address": "Invalid email address",
+    "invalid_twitter_username": "Invalid twitter username",
+    "invalid_matrix_address": "Invalid matrix address",
+    "check_your_primary_inbox_or_spam_to_verify_your_email_address": "Check your primary inbox or spam to verify your email address.",
+    "please_login_to_twitter_to_verify_your_email_address": "Please login to Twitter to verify your email address.",
+    "to_verify_your_matrix_id_please_set_your_element_display_name_to": "To verify your Matrix ID, please set your Element display name to",
+    "make_sure_to_follow_this_format_for_successful_verification": "Make sure to follow this format for successful verification.",
+    "regarding_any_query_contact_us": "Regarding any query Contact us",
+    "do_you_have_an_existing_preimage": "Do you have an existing preimage?",
+    "create_a_multisig_wallet_on_polkasafe_now": "Create a Multisig Wallet on PolkaSafe now",
+    "using_a_multisig_proposal_address_provides_a_higher_chance_for_the_proposal_to_pass": "Using a multisig proposal address provides a higher chance for the proposal to pass.",
+    "remove_all": "Remove All",
+    "add_beneficiary": "Add Beneficiary",
+    "set_onchain_identity": "Set onchain identity",
+    "your_beneficiary_address_is_currently_unverified_please_set_your_onchain_identity_to_increase_the_likelihood_of_your_proposal_being_approved": "Your beneficiary address is currently unverified. Please set your on-chain identity to increase the likelihood of your proposal being approved.",
+    "your_proposer_address_is_currently_unverified_please_set_your_onchain_identity_to_increase_the_likelihood_of_your_proposal_being_approved": "Your proposer address is currently unverified. Please set your on-chain identity to increase the likelihood of your proposal being approved.",
+    "preimage_length": "Preimage Length",
+    "preimage_hash": "Preimage Hash",
+    "invalid_preimage_hash": "Invalid Preimage hash",
+    "funding_amount_tooltip": "Amount that needs to be funded to the proposal.",
+    "linked": "linked",
+    "preimage_link": "Preimage Link",
+    "deposit_amount": "Deposit Amount",
+    "an_amount_of": "an amount of",
+    "will_be_required_to_submit_proposal": "will be required to submit proposal.",
+    "pay_decision_deposit": "Pay Decision Deposit",
+    "continue": "Continue",
+    "your_treasury_proposal_information_title_description_tags_would_be_lost": "Your treasury proposal information (Title, Description & Tags) would be lost.",
+    "are_you_sure_you_want_to_exit_proposal_creation_process": "Are you sure you want to exit proposal creation process?",
+    "exit_treasury_proposal_creation": "Exit Treasury Proposal Creation",
+    "suggestions_regarding_proposal_creation_have_not_been_incorporated_the_community_will_have_visibility_about_this": "Suggestions regarding proposal creation have not been incorporated. The community will have visibility about this.",
+    "of": "of",
+    "view_warnings": "View warnings",
+    "beneficiary_address_is_not_a_multisig": "Beneficiary Address is not a multisig.",
+    "discussion_post_was_not_created_to_gather_feedback_before_proposal_creation": "Discussion post was not created to gather feedback before proposal creation",
+    "completed_actions": "Completed Actions",
+    "beneficiary_address_is_multisig": "Beneficiary Address is multisig.",
+    "discussion_post_was_created_to_gather_feedback_before_proposal_creation": "Discussion post was created to gather feedback before proposal creation.",
+    "referendum_created_successfully": "Referendum created successfully",
+    "referendum_killed_successfully": "Referendum Killed successfully",
+    "referendum_canceled_successfully": "Referendum Canceled Successfully",
+    "proposal_created_successfully_for": "Proposal created successfully for",
+    "place_a_decision_deposit_in": "Place a decision deposit in",
+    "to_prevent_your_proposal_from_being_timed_out": "to prevent your proposal from being timed out",
+    "Failed!": "Failed!",
+    "Unable to fetch data for this discussion number.": "Unable to fetch data for this discussion number.",
+    "Have you initiated a discussion post for your proposal already?": "Have you initiated a discussion post for your proposal already?",
+    "Yes": "Yes",
+    "No": "No",
+    "Please add the '${name}'": "Please add the '${name}'",
+    "Please add a valid discussion link for {{network}} Network": "Please add a valid discussion link for {{network}} Network",
+    "Link Discussion Post": "Link Discussion Post",
+    "Discussion posts allows the community to deliberate and recommend improvements. A Discussion should be created before creating a proposal.": "Discussion posts allows the community to deliberate and recommend improvements. A Discussion should be created before creating a proposal.",
+    "Create Discussion Post": "Create Discussion Post",
+    "Write a proposal": "Write a proposal",
+    "Title": "Title",
+    "Title should not exceed 150 characters.": "Title should not exceed 150 characters.",
+    "Tags": "Tags",
+    "Add Tags": "Add Tags",
+    "Description": "Description",
+    "a_new_progress_report_was_added": "A new Progress Report was added",
+    "for_this_referenda": "for this referenda.",
+    "pdf_document": "PDF Document",
+    "users_have_already_rated_the_progress_report": "users have already rated the progress report.",
+    "view_progress_report_in_detail": "View Progress Report in detail"
 }
     
 
