fix: strings to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1359,7 +1359,174 @@
     "for_this_referenda": "for this referenda.",
     "pdf_document": "PDF Document",
     "users_have_already_rated_the_progress_report": "users have already rated the progress report.",
-    "view_progress_report_in_detail": "View Progress Report in detail"
+    "view_progress_report_in_detail": "View Progress Report in detail",
+    "this_referendum_has_been_created_to_cancel": "This Referendum has been created to cancel",
+    "requested": "Requested",
+    "no_data_returned_from_the_saving_comment_query": "No data returned from the saving comment query",
+    "an_unexpected_error_occurred": "An unexpected error occurred.",
+    "you_must_log_in_to_comment": "You must log in to comment.",
+    "comment_posted_successfully": "Comment posted successfully.",
+    "timeline": "Timeline",
+    "on_chain_info": "On Chain Info",
+    "stats": "Stats",
+    "this_is_a_child_bounty_of": "This is a child bounty of",
+    "the_child_bounty_payout_is_ready_to_be_claimed": "The child bounty payout is ready to be claimed",
+    "this_grant_will_be_closed_in": "This grant will be closed in",
+    "discover_similar_proposals": "Discover similar proposals",
+    "sign_and_submit": "Sign & Submit",
+    "please_install_polkadotjs_extension_to_claim": "Please install polkadot.js extension to claim.",
+    "there_was_an_error_in_creating_the_poll": "There was an error in creating the poll :(",
+    "error_in_creating_poll": "Error in creating poll",
+    "poll_created": "Poll Created",
+    "create_poll": "Create Poll",
+    "options": "Options",
+    "please_input_an_option_text_or_remove_this_field": "Please input an option text or remove this field.",
+    "add_option": "Add Option",
+    "hours": "Hours",
+    "minutes": "Minutes",
+    "poll": "Poll",
+    "poll_ended": "Poll Ended",
+    "join_polkassembly_to_like_this_proposal": "Join Polkassembly to Like this proposal.",
+    "join_polkassembly_to_dislike_this_proposal": "Join Polkassembly to Dislike this proposal.",
+    "join_polkassembly_to_like_this_comment": "Join Polkassembly to Like this comment.",
+    "delete": "Delete",
+    "report": "Report",
+    "unsubscribe": "Unsubscribe",
+    "subscribe": "Subscribe",
+    "untrack": "Untrack",
+    "comment_not_available": "Comment not available",
+    "grant_closed": "Grant closed, no comments can be added or edited.",
+    "to_comment": "to comment",
+    "users_are_saying": "Users are saying...",
+    "based_on_all_comments_and_replies": "Based on all comments and replies",
+    "see_less": "See Less",
+    "ai_generated_from_comments": "AI-generated from comments",
+    "select_to_filter": "Select to filter",
+    "no_comments_available": "No comments available",
+    "join_polkassembly_to_comment_on_this_proposal": "Join Polkassembly to Comment on this proposal.",
+    "your_reply_was_added": "Your reply was added.",
+    "there_was_an_error_in_saving_your_reply": "There was an error in saving your reply.",
+    "comment_link_copied_to_clipboard": "Comment link copied to clipboard.",
+    "the_comment_was_deleted": "The comment was deleted.",
+    "your_comment_was_deleted": "Your comment was deleted.",
+    "there_was_an_error_in_deleting_your_comment": "There was an error in deleting your comment.",
+    "copy_link": "Copy link",
+    "sentiment": "Sentiment",
+    "reply": "Reply",
+    "comment_not_posted": "Comment not posted",
+    "retry": "Retry",
+    "failed_to_save_reply": "Failed to save reply",
+    "your_reply_was_edited": "Your reply was edited.",
+    "error_in_saving_reply": "Error in saving reply",
+    "there_was_an_error_in_editing_your_reply": "There was an error in editing your reply.",
+    "your_reply_was_deleted": "Your reply was deleted.",
+    "there_was_an_error_in_deleting_your_reply": "There was an error in deleting your reply.",
+    "error_deleting_reply": "Error deleting reply",
+    "editing": "Editing",
+    "reply_not_posted": "Reply not posted",
+    "failed_to_get_end_block_number_poll_creation_failed": "Failed to get end block number. Poll creation failed!",
+    "there_was_an_error_creating_your_post": "There was an error creating your post.",
+    "post_created_successfully": "Post created successfully.",
+    "new_post": "New Post",
+    "enter_title": "Enter Title",
+    "add_poll_to": "Add poll to",
+    "discussion": "discussion",
+    "grant": "grant",
+    "please_select_a_topic": "Please select a 'topic'",
+    "select_topic": "Select Topic",
+    "create_post": "Create Post",
+    "council_signals": "Council Signals",
+    "this_represents_the_off_chain_votes_of_council_members": "This represents the off-chain votes of council members",
+    "no_votes": "No Votes",
+    "poll_signals": "Poll Signals",
+    "this_represents_the_off_chain_votes_of_polkassembly_users_including_council_members": "This represents the off-chain votes of Polkassembly users including council members",
+    "poll_ends_in": "Poll ends in",
+    "error_in_saving_your_post": "Error in saving your post.",
+    "your_post_is_now_edited": "Your post is now edited",
+    "successfully_post_linked": "Successfully post linked.",
+    "successfully_removed_post_linked": "Successfully removed post linked.",
+    "remove": "Remove",
+    "link_post": "Link Post",
+    "confirm_details_of_post_id_to_link": "Confirm Details of Post ID to Link",
+    "post_id_to_link": "Post ID to Link",
+    "enter_post_id": "Enter post id",
+    "enter_post_type": "Enter post type",
+    "multisig_account": "Multisig Account",
+    "single_signatory_account": "Single signatory account",
+    "non_verified": "Non Verified",
+    "beneficiary_is": "Beneficiary is",
+    "proposer_is": "Proposer is",
+    "evaluation_summary": "Evaluation Summary",
+    "beneficiaries_of_this_proposal_are_as_follows": "Beneficiaries of this proposal are as follows:",
+    "ai_summary": "AI Summary",
+    "powered_by_openai": "Powered by OpenAI",
+    "the_post_was_deleted_successfully": "The post was deleted successfully",
+    "audit": "Audit",
+    "failed_to_save_report": "Failed to save report",
+    "progress_report_not_added": "Progress Report not added",
+    "progress_reports": "Progress Reports",
+    "no_progress_report_added": "No Progress Report Added",
+    "beneficiaries": "Beneficiaries",
+    "table": "Table",
+    "name": "Name",
+    "value": "Value",
+    "json": "JSON",
+    "metadata": "Metadata",
+    "enactment_after": "Enactment After",
+    "enactment_at": "Enactment At",
+    "deciding_since": "Deciding Since",
+    "confirm_started": "Confirm Started",
+    "confirming": "Confirming",
+    "submission_deposit": "Submission Deposit",
+    "closing": "Closing",
+    "method": "Method",
+    "end": "End",
+    "delay": "Delay",
+    "vote_threshold": "Vote Threshold",
+    "member_count": "Member Count",
+    "proposal_hash": "Proposal Hash",
+    "reward": "Reward",
+    "fee": "Fee",
+    "curator_deposit": "Curator Deposit",
+    "bond": "Bond",
+    "payee": "Payee",
+    "motion_method": "Motion's Method",
+    "ipfs": "IPFS",
+    "cid": "CID",
+    "question": "Question",
+    "market_metadata": "Market Metadata",
+    "call_arguments": "Call Arguments",
+    "section": "Section",
+    "accounts_are_the_number_of_unique_addresses_casting_a_vote": "Accounts are the number of unique addresses casting a vote",
+    "conviction_vote_is_the_number_of_tokens_used_for_voting_multiplied_by_conviction": "Conviction vote is the number of tokens used for voting multiplied by conviction",
+    "vote_amount_is_the_number_of_tokens_used_for_voting": "Vote amount is the number of tokens used for voting",
+    "no_votes_have_been_casted_yet": "No votes have been casted yet",
+    "time_split": "Time Split",
+    "not_enough_data_available_pls_check_back_after_1_day": "Not enough data available, pls check back after 1 day.",
+    "total_votes_casted": "Total Votes Casted",
+    "conviction_used_by_accounts": "Conviction used by Accounts",
+    "votes_for_delegated_vs_solo": "Votes for Delegated VS Solo",
+    "vote_distribution": "Vote Distribution",
+    "delegated_vs_solo": "Delegated VS Solo",
+    "turnout": "Turnout",
+    "issuance": "Issuance",
+    "reports_provided_here_represent_the_auditors_views_and_are_not_endorsed_by_polkassembly": "Reports provided here represent the auditor's views and are not endorsed by Polkassembly",
+    "videos": "Videos",
+    "reports": "Reports",
+    "no_audit_reports_available": "No audit reports available",
+    "join_polkassembly_to_use_batch_voting": "Join Polkassembly to use batch voting",
+    "join_polkassembly_to_vote_on_this_proposal": "Join Polkassembly to Vote on this proposal.",
+    "discuss_contribute_get_regular_updates_from_polkassembly": "Discuss, contribute and get regular updates from Polkassembly.",
+    "login_signup": "Login/Signup",
+    "this_pip_is_proposed_via": "This PIP is proposed via",
+    "technical_committee": "Technical Committee",
+    "upgrade_committee": "Upgrade Committee",
+    "is_not_open_to_community_voting": "is not open to community voting",
+    "you_havent_voted_yet_vote_now_and_do_your_bit_for_the_community": "You haven't voted yet, vote now and do your bit for the community",
+    "you_need_at_least_one_account_in_polkadot_js_extension_to_use_this_feature": "You need at least one account in Polkadot-js extension to use this feature.",
+    "please_reload_this_page_after_adding_accounts": "Please reload this page after adding accounts.",
+    "progress_report_not_added_by_proposer": "Progress Report not added by Proposer.",
+    "last_vote": "Last Vote",
+    "transactions_failed": "Transactions failed!"
 }
-    
 
