fix: strings to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1527,6 +1527,29 @@
     "please_reload_this_page_after_adding_accounts": "Please reload this page after adding accounts.",
     "progress_report_not_added_by_proposer": "Progress Report not added by Proposer.",
     "last_vote": "Last Vote",
-    "transactions_failed": "Transactions failed!"
+    "transactions_failed": "Transactions failed!",
+    "child_bounty_submission_added_successfully": "Child Bounty Sumbission added successfully",
+    "error_in_saving_your_submission": "Error in saving your submission",
+    "make_submission": "Make Submission",
+    "title_should_not_exceed_150_characters": "Title should not exceed 150 characters.",
+    "request_amount": "Request Amount",
+    "send": "Send",
+    "delete_your_submission": "Delete Your Submission",
+    "your_submission_information_title_description_tags_would_be_lost": "Your submission information (Title, Description & Tags) would be lost.",
+    "error_updating_submission_status": "Error updating submission status:",
+    "submission_status_updated_successfully": "Submission status updated successfully",
+    "you_can_only_make_one_submission_per_bounty": "You can only make one submission per bounty.",
+    "add_submission": "Add Submission",
+    "edit_submission": "Edit Submission",
+    "voting_data": "Voting Data",
+    "current_support": "Current Support",
+    "current_approval": "Current Approval",
+    "threshold": "Threshold",
+    "voter": "Voter",
+    "vote_breakdown": "Vote Breakdown",
+    "error_in_fetching_delegated_data": "Error in fetching delegated data",
+    "ayes": "Ayes",
+    "nays": "Nays",
+    "delegation_data": "Delegation Data"
 }
 
