fix: string to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1550,6 +1550,83 @@
     "error_in_fetching_delegated_data": "Error in fetching delegated data",
     "ayes": "Ayes",
     "nays": "Nays",
-    "delegation_data": "Delegation Data"
+    "delegation_data": "Delegation Data",
+    "council_votes": "Council Votes",
+    "error_fetching_council_members": "Error fetching council members:",
+    "council_pallet_not_available": "Council pallet is not available on this network.",
+    "vote_with_account": "Vote with Account",
+    "no_account_found_from_the_council": "No account found from the council",
+    "let_me_try_still": "Let me try still.",
+    "failed_to_fetch_committee_members": "Failed to fetch committee members",
+    "referendum_id_not_set": "ReferendumId not set",
+    "cast_your_vote": "Cast Your Vote",
+    "no_addresses_found_in_the_address_selection_tab": "No addresses found in the address selection tab.",
+    "choose_your_vote": "Choose your vote",
+    "only_polymesh_committee_members_may_vote": "Only Polymesh Committee members may vote.",
+    "total_seats": "Total Seats",
+    "post_data_fetched_successfully": "Post data fetched successfully.",
+    "post_linked_successfully": "Post linked successfully.",
+    "preview": "Preview",
+    "discussion_details": "Discussion details",
+    "link_discussion_post": "Link Discussion Post",
+    "error_in_saving_post": "Error in saving post",
+    "proposal_details": "Proposal Details",
+    "link_discussion": "Link Discussion",
+    "please_add_contextual_info_for_voters_to_make_an_informed_decision": "Please add contextual info for voters to make an informed decision",
+    "link_existing_discussion_post": "+ Link Existing Discussion Post",
+    "continue_without_linking": "Continue Without Linking",
+    "please_enter_a_valid_content": "Please enter a valid content",
+    "please_enter_a_valid_title": "Please enter a valid title",
+    "error_in_editing_the_post": "Error in editing the post.",
+    "invalid_url": "Invalid URL",
+    "edit_proposal_details": "Edit Proposal Details",
+    "linked_discussion": "Linked Discussion",
+    "second_this_proposal": "Second this Proposal!",
+    "endorsed_by": "Endorsed by",
+    "second": "Second",
+    "endorse_with_account": "Endorse with account",
+    "connecting_to_walletconnect": "Connecting to WalletConnect",
+    "second_proposal": "Second Proposal",
+    "only_council_members_can_endorse_tips": "Only council members can endorse tips.",
+    "endorse": "Endorse",
+    "allocate_a_suggested_tip_amount_with_enough_endorsements_the_suggested_values_are_averaged_and_sent_to_the_beneficiary": "Allocate a suggested tip amount. With enough endorsements, the suggested values are averaged and sent to the beneficiary.",
+    "receiver_of_final_tip": "Receiver of Final Tip",
+    "amount_tipped_by_an_individual_organization": "Amount tipped by an individual/organization",
+    "tippers": "Tippers",
+    "not_found": "Not Found",
+    "error_fetching_proposal_status": "Error fetching proposal status",
+    "proposal_status_was_saved": "Proposal status was saved",
+    "proposal_status_was_not_saved": "Proposal status was not saved",
+    "proposal_status_was_updated": "Proposal status was updated",
+    "proposal_status_was_not_updated": "Proposal status was not updated",
+    "set_deadline_date": "Set Deadline Date",
+    "deadline": "Deadline",
+    "deadline_not_set": "Deadline: Not Set",
+    "deadline_date": "Deadline Date",
+    "aye_vote_value": "Aye vote value",
+    "nay_vote_value": "Nay vote value",
+    "add_balance": "Add balance",
+    "abstain_vote_value": "Abstain vote value",
+    "vote_lock": "Vote lock",
+    "amt": "Amt.",
+    "cast_vote_with_polkasafe_multisig": "Cast Vote with Polkasafe Multisig",
+    "add_an_address_to_the_selected_wallet_by_your_extension": "Add an address to the selected wallet by your extension.",
+    "this_account_has_already_delegated_vote_to": "This account has already delegated vote to",
+    "vote_with_proxy": "Vote with proxy",
+    "delegated_power": "Delegated power",
+    "total_amount_of_voting_power": "Total amount of voting power",
+    "voting_with_polkasafe_multisig_initiated": "Voting with Polkasafe Multisig initiated",
+    "voted_successfully": "Voted Successfully",
+    "please_use_ethereum_account_via_talisman_wallet": "Please use Ethereum account via Talisman wallet.",
+    "only_fellowship_members_may_vote": "Only fellowship members may vote.",
+    "fetching_fellowship_members": "Fetching fellowship members...",
+    "voting_details": "Voting Details",
+    "view_vote_history": "View Vote History",
+    "threshold_curves": "Threshold Curves",
+    "voting_status": "Voting Status",
+    "bare_ayes": "Bare Ayes",
+    "estimated_date": "Estimated Date",
+    "based_on_current_tally": "based on current tally",
+    "proposal_estimated_to_pass_in": "Proposal estimated to pass in"
 }
 
